# UniDesign

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  pyproject.toml
.github/workflows/: python-wrapper.yml
bindings/python/: SequenceBindings.cpp
cmake/: UniDesignConfig.cmake.in
docs/python-wrapper/: README.md  conf.py  index.rst
examples/python/: compute_stability.py  energy_scoring.py  ligand_parameterization.py  ligand_parameters.py  monomer_design.py
include/unidesign/: SequenceHandle.hpp  StructureHandle.hpp
python/tests/: conftest.py  test_jobs.py  test_runner.py
python/unidesign/: __init__.py  artifacts.py  config.py  exceptions.py  paths.py  runner.py
python/unidesign/jobs/: __init__.py  _shared.py  design.py  energy.py  ligand.py
src/: ManagedTypes.hpp
src/python/: bindings.cpp
support/: ProgramGlobals.cpp
tests/: SequenceHandleTests.cpp  StructureHandleTest.cpp  conftest.py  test_basic.py
tests/python_wrapper/: test_jobs.py
unidesign/: __init__.py
