[build-system]
requires = [
  "scikit-build-core>=0.5.0",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "unidesign"
version = "0.1.0"
description = "Python bindings for the UniDesign core library"
readme = "README.md"
license = { file = "license" }
requires-python = ">=3.8"
authors = [
  { name = "UniDesign Developers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/tommyhuangthu/UniDesign"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["unidesign"]
sdist.include = [
  "CMakeLists.txt",
  "src/**",
  "unidesign/**",
  "tests/**",
  "README.md",
  "license",
]

[tool.scikit-build.package-data]
"unidesign" = ["data/fixtures/*"]
